
numcosmo_sources = []

numcosmo_build_cfg_h = configure_file(
    input: 'build_cfg.h.in',
    output: 'build_cfg.h',
    install_dir: numcosmo_includedir,
    install_tag: 'devel',
    configuration: numcosmo_build_cfg,
)
numcosmo_sources += numcosmo_build_cfg_h

subdir('external/sundials')
subdir('external/libcuba')
subdir('external/levmar')
subdir('external/misc')
subdir('external/toeplitz')
subdir('external/class')
subdir('external/plc')
subdir('external/lintegrate')

ncm_sources = files(
    'ncm/specfunc/ncm_binsplit.c',
    'ncm/stats/ncm_bootstrap.c',
    'ncm/core/ncm_c.c',
    'ncm/data/ncm_catalog.c',
    'ncm/sphere/ncm_sky_footprint.c',
    'ncm/sphere/ncm_sky_footprint_rectangular.c',
    'ncm/core/ncm_cfg.c',
    'ncm/dynamics/ncm_csq1d.c',
    'ncm/data/ncm_data.c',
    'ncm/data/ncm_data_dist1d.c',
    'ncm/data/ncm_data_dist2d.c',
    'ncm/data/ncm_data_funnel.c',
    'ncm/data/ncm_data_gauss.c',
    'ncm/data/ncm_data_gauss_cov.c',
    'ncm/data/ncm_data_gauss_cov_mvnd.c',
    'ncm/data/ncm_data_gauss_diag.c',
    'ncm/data/ncm_data_gaussmix2d.c',
    'ncm/data/ncm_data_poisson.c',
    'ncm/data/ncm_data_rosenbrock.c',
    'ncm/data/ncm_dataset.c',
    'ncm/integration/ncm_diff.c',
    'ncm/core/ncm_dtuple.c',
    'ncm/fftlog/ncm_fftlog.c',
    'ncm/fftlog/ncm_fftlog_gausswin2.c',
    'ncm/fftlog/ncm_fftlog_sbessel_j.c',
    'ncm/fftlog/ncm_fftlog_sbessel_jljm.c',
    'ncm/fftlog/ncm_fftlog_tophatwin2.c',
    'ncm/fit/ncm_fit.c',
    'ncm/fit/ncm_fit_esmcmc.c',
    'ncm/fit/ncm_fit_esmcmc_walker.c',
    'ncm/fit/ncm_fit_esmcmc_walker_apes.c',
    'ncm/fit/ncm_fit_esmcmc_walker_stretch.c',
    'ncm/fit/ncm_fit_esmcmc_walker_walk.c',
    'ncm/fit/ncm_fit_gsl_ls.c',
    'ncm/fit/ncm_fit_gsl_mm.c',
    'ncm/fit/ncm_fit_gsl_mms.c',
    'ncm/fit/ncm_fit_levmar.c',
    'ncm/fit/ncm_fit_mc.c',
    'ncm/fit/ncm_fit_mcbs.c',
    'ncm/fit/ncm_fit_mcmc.c',
    'ncm/fit/ncm_fit_state.c',
    'ncm/core/ncm_func_eval.c',
    'ncm/core/ncm_function_cache.c',
    'ncm/integration/ncm_integral1d.c',
    'ncm/integration/ncm_integral1d_ptr.c',
    'ncm/integration/ncm_integral_nd.c',
    'ncm/integration/ncm_integrate.c',
    'ncm/core/ncm_iset.c',
    'ncm/algebra/ncm_lapack.c',
    'ncm/fit/ncm_lh_ratio1d.c',
    'ncm/fit/ncm_lh_ratio2d.c',
    'ncm/fit/ncm_likelihood.c',
    'ncm/algebra/ncm_matrix.c',
    'ncm/core/ncm_memory_pool.c',
    'ncm/model/ncm_model.c',
    'ncm/model/ncm_model_builder.c',
    'ncm/model/ncm_model_ctrl.c',
    'ncm/model/ncm_model_funnel.c',
    'ncm/model/ncm_model_mvnd.c',
    'ncm/model/ncm_model_rosenbrock.c',
    'ncm/mpi/ncm_mpi_job.c',
    'ncm/mpi/ncm_mpi_job_feval.c',
    'ncm/mpi/ncm_mpi_job_fit.c',
    'ncm/mpi/ncm_mpi_job_mcmc.c',
    'ncm/mpi/ncm_mpi_job_test.c',
    'ncm/specfunc/ncm_mpsf_0F1.c',
    'ncm/specfunc/ncm_mpsf_sbessel.c',
    'ncm/specfunc/ncm_mpsf_trig_int.c',
    'ncm/model/ncm_mset.c',
    'ncm/fit/ncm_mset_catalog.c',
    'ncm/model/ncm_mset_func.c',
    'ncm/model/ncm_mset_func1.c',
    'ncm/model/ncm_mset_func_list.c',
    'ncm/fit/ncm_mset_trans_kern.c',
    'ncm/fit/ncm_mset_trans_kern_cat.c',
    'ncm/fit/ncm_mset_trans_kern_flat.c',
    'ncm/fit/ncm_mset_trans_kern_gauss.c',
    'ncm/algebra/ncm_nnls.c',
    'ncm/algebra/ncm_poly_roots.c',
    'ncm/algebra/ncm_laurent_series.c',
    'ncm/core/ncm_obj_array.c',
    'ncm/spline/ncm_ode_spline.c',
    'ncm/core/ncm_pln1d.c',
    'ncm/powspec/ncm_powspec.c',
    'ncm/powspec/ncm_powspec_corr3d.c',
    'ncm/powspec/ncm_powspec_filter.c',
    'ncm/powspec/ncm_powspec_sphere_proj.c',
    'ncm/powspec/ncm_powspec_spline2d.c',
    'ncm/fit/ncm_prior.c',
    'ncm/fit/ncm_prior_flat.c',
    'ncm/fit/ncm_prior_flat_func.c',
    'ncm/fit/ncm_prior_flat_param.c',
    'ncm/fit/ncm_prior_gauss.c',
    'ncm/fit/ncm_prior_gauss_func.c',
    'ncm/fit/ncm_prior_gauss_param.c',
    'ncm/algebra/ncm_quaternion.c',
    'ncm/model/ncm_reparam.c',
    'ncm/model/ncm_reparam_linear.c',
    'ncm/core/ncm_rng.c',
    'ncm/specfunc/ncm_sbessel_integrator.c',
    'ncm/specfunc/ncm_sbessel_integrator_fftl.c',
    'ncm/specfunc/ncm_sbessel_integrator_gl.c',
    'ncm/specfunc/ncm_sbessel_integrator_levin.c',
    'ncm/specfunc/ncm_sbessel_ode_solver.c',
    'ncm/core/ncm_serialize.c',
    'ncm/specfunc/ncm_sf_sbessel.c',
    'ncm/specfunc/ncm_sf_spherical_harmonics.c',
    'ncm/model/ncm_sparam.c',
    'ncm/sphere/ncm_spectral.c',
    'ncm/sphere/ncm_sphere_map.c',
    'ncm/sphere/ncm_sphere_nn.c',
    'ncm/spline/ncm_spline.c',
    'ncm/spline/ncm_spline2d.c',
    'ncm/spline/ncm_spline2d_bicubic.c',
    'ncm/spline/ncm_spline2d_gsl.c',
    'ncm/spline/ncm_spline2d_spline.c',
    'ncm/spline/ncm_spline_cubic.c',
    'ncm/spline/ncm_spline_cubic_d2.c',
    'ncm/spline/ncm_spline_cubic_notaknot.c',
    'ncm/spline/ncm_spline_func.c',
    'ncm/spline/ncm_spline_func_test.c',
    'ncm/spline/ncm_spline_gsl.c',
    'ncm/spline/ncm_spline_rbf.c',
    'ncm/spline/ncm_spline_vec.c',
    'ncm/stats/ncm_function_sample_set.c',
    'ncm/stats/ncm_stats_dist.c',
    'ncm/stats/ncm_stats_dist1d.c',
    'ncm/stats/ncm_stats_dist1d_epdf.c',
    'ncm/stats/ncm_stats_dist1d_spline.c',
    'ncm/stats/ncm_stats_dist2d.c',
    'ncm/stats/ncm_stats_dist2d_spline.c',
    'ncm/stats/ncm_stats_dist_kde.c',
    'ncm/stats/ncm_stats_dist_kernel.c',
    'ncm/stats/ncm_stats_dist_kernel_gauss.c',
    'ncm/stats/ncm_stats_dist_kernel_st.c',
    'ncm/stats/ncm_stats_dist_vkde.c',
    'ncm/stats/ncm_stats_vec.c',
    'ncm/core/ncm_timer.c',
    'ncm/core/ncm_util.c',
    'ncm/algebra/ncm_vector.c',
    'ncm/model/ncm_vparam.c',
    'ncm_build_inline.c',
)

ncm_sources_nogi = files()

ncm_headers = files(
    'ncm/specfunc/ncm_binsplit.h',
    'ncm/stats/ncm_bootstrap.h',
    'ncm/core/ncm_c.h',
    'ncm/data/ncm_catalog.h',
    'ncm/sphere/ncm_sky_footprint.h',
    'ncm/sphere/ncm_sky_footprint_rectangular.h',
    'ncm/core/ncm_cfg.h',
    'ncm/dynamics/ncm_csq1d.h',
    'ncm/data/ncm_data.h',
    'ncm/data/ncm_data_dist1d.h',
    'ncm/data/ncm_data_dist2d.h',
    'ncm/data/ncm_data_funnel.h',
    'ncm/data/ncm_data_gauss.h',
    'ncm/data/ncm_data_gauss_cov.h',
    'ncm/data/ncm_data_gauss_cov_mvnd.h',
    'ncm/data/ncm_data_gauss_diag.h',
    'ncm/data/ncm_data_gaussmix2d.h',
    'ncm/data/ncm_data_poisson.h',
    'ncm/data/ncm_data_rosenbrock.h',
    'ncm/data/ncm_dataset.h',
    'ncm/integration/ncm_diff.h',
    'ncm/core/ncm_dtuple.h',
    'ncm/fftlog/ncm_fftlog.h',
    'ncm/fftlog/ncm_fftlog_gausswin2.h',
    'ncm/fftlog/ncm_fftlog_sbessel_j.h',
    'ncm/fftlog/ncm_fftlog_sbessel_jljm.h',
    'ncm/fftlog/ncm_fftlog_tophatwin2.h',
    'ncm/fit/ncm_fit.h',
    'ncm/fit/ncm_fit_esmcmc.h',
    'ncm/fit/ncm_fit_esmcmc_walker.h',
    'ncm/fit/ncm_fit_esmcmc_walker_apes.h',
    'ncm/fit/ncm_fit_esmcmc_walker_stretch.h',
    'ncm/fit/ncm_fit_esmcmc_walker_walk.h',
    'ncm/fit/ncm_fit_gsl_ls.h',
    'ncm/fit/ncm_fit_gsl_mm.h',
    'ncm/fit/ncm_fit_gsl_mms.h',
    'ncm/fit/ncm_fit_levmar.h',
    'ncm/fit/ncm_fit_mc.h',
    'ncm/fit/ncm_fit_mcbs.h',
    'ncm/fit/ncm_fit_mcmc.h',
    'ncm/fit/ncm_fit_state.h',
    'ncm/core/ncm_func_eval.h',
    'ncm/core/ncm_function_cache.h',
    'ncm/integration/ncm_integral1d.h',
    'ncm/integration/ncm_integral1d_ptr.h',
    'ncm/integration/ncm_integral_nd.h',
    'ncm/integration/ncm_integrate.h',
    'ncm/core/ncm_iset.h',
    'ncm/algebra/ncm_lapack.h',
    'ncm/fit/ncm_lh_ratio1d.h',
    'ncm/fit/ncm_lh_ratio2d.h',
    'ncm/fit/ncm_likelihood.h',
    'ncm/algebra/ncm_matrix.h',
    'ncm/core/ncm_memory_pool.h',
    'ncm/model/ncm_model.h',
    'ncm/model/ncm_model_builder.h',
    'ncm/model/ncm_model_ctrl.h',
    'ncm/model/ncm_model_funnel.h',
    'ncm/model/ncm_model_mvnd.h',
    'ncm/model/ncm_model_rosenbrock.h',
    'ncm/mpi/ncm_mpi_job.h',
    'ncm/mpi/ncm_mpi_job_feval.h',
    'ncm/mpi/ncm_mpi_job_fit.h',
    'ncm/mpi/ncm_mpi_job_mcmc.h',
    'ncm/mpi/ncm_mpi_job_test.h',
    'ncm/specfunc/ncm_mpsf_0F1.h',
    'ncm/specfunc/ncm_mpsf_sbessel.h',
    'ncm/specfunc/ncm_mpsf_trig_int.h',
    'ncm/model/ncm_mset.h',
    'ncm/fit/ncm_mset_catalog.h',
    'ncm/model/ncm_mset_func.h',
    'ncm/model/ncm_mset_func1.h',
    'ncm/model/ncm_mset_func_list.h',
    'ncm/fit/ncm_mset_trans_kern.h',
    'ncm/fit/ncm_mset_trans_kern_cat.h',
    'ncm/fit/ncm_mset_trans_kern_flat.h',
    'ncm/fit/ncm_mset_trans_kern_gauss.h',
    'ncm/algebra/ncm_nnls.h',
    'ncm/algebra/ncm_poly_roots.h',
    'ncm/algebra/ncm_laurent_series.h',
    'ncm/core/ncm_obj_array.h',
    'ncm/spline/ncm_ode_spline.h',
    'ncm/core/ncm_pln1d.h',
    'ncm/powspec/ncm_powspec.h',
    'ncm/powspec/ncm_powspec_corr3d.h',
    'ncm/powspec/ncm_powspec_filter.h',
    'ncm/powspec/ncm_powspec_sphere_proj.h',
    'ncm/powspec/ncm_powspec_spline2d.h',
    'ncm/fit/ncm_prior.h',
    'ncm/fit/ncm_prior_flat.h',
    'ncm/fit/ncm_prior_flat_func.h',
    'ncm/fit/ncm_prior_flat_param.h',
    'ncm/fit/ncm_prior_gauss.h',
    'ncm/fit/ncm_prior_gauss_func.h',
    'ncm/fit/ncm_prior_gauss_param.h',
    'ncm/algebra/ncm_quaternion.h',
    'ncm/model/ncm_reparam.h',
    'ncm/model/ncm_reparam_linear.h',
    'ncm/core/ncm_rng.h',
    'ncm/specfunc/ncm_sbessel_integrator.h',
    'ncm/specfunc/ncm_sbessel_integrator_fftl.h',
    'ncm/specfunc/ncm_sbessel_integrator_gl.h',
    'ncm/specfunc/ncm_sbessel_integrator_levin.h',
    'ncm/specfunc/ncm_sbessel_ode_solver.h',
    'ncm/core/ncm_serialize.h',
    'ncm/specfunc/ncm_sf_sbessel.h',
    'ncm/specfunc/ncm_sf_spherical_harmonics.h',
    'ncm/model/ncm_sparam.h',
    'ncm/sphere/ncm_spectral.h',
    'ncm/sphere/ncm_sphere_map.h',
    'ncm/sphere/ncm_sphere_nn.h',
    'ncm/spline/ncm_spline.h',
    'ncm/spline/ncm_spline2d.h',
    'ncm/spline/ncm_spline2d_bicubic.h',
    'ncm/spline/ncm_spline2d_gsl.h',
    'ncm/spline/ncm_spline2d_spline.h',
    'ncm/spline/ncm_spline_cubic.h',
    'ncm/spline/ncm_spline_cubic_d2.h',
    'ncm/spline/ncm_spline_cubic_notaknot.h',
    'ncm/spline/ncm_spline_func.h',
    'ncm/spline/ncm_spline_func_test.h',
    'ncm/spline/ncm_spline_gsl.h',
    'ncm/spline/ncm_spline_rbf.h',
    'ncm/spline/ncm_spline_vec.h',
    'ncm/stats/ncm_function_sample_set.h',
    'ncm/stats/ncm_stats_dist.h',
    'ncm/stats/ncm_stats_dist1d.h',
    'ncm/stats/ncm_stats_dist1d_epdf.h',
    'ncm/stats/ncm_stats_dist1d_spline.h',
    'ncm/stats/ncm_stats_dist2d.h',
    'ncm/stats/ncm_stats_dist2d_spline.h',
    'ncm/stats/ncm_stats_dist_kde.h',
    'ncm/stats/ncm_stats_dist_kernel.h',
    'ncm/stats/ncm_stats_dist_kernel_gauss.h',
    'ncm/stats/ncm_stats_dist_kernel_st.h',
    'ncm/stats/ncm_stats_dist_vkde.h',
    'ncm/stats/ncm_stats_vec.h',
    'ncm/core/ncm_timer.h',
    'ncm/core/ncm_util.h',
    'ncm/algebra/ncm_vector.h',
    'ncm/model/ncm_vparam.h',
)

ncm_headers_nogi = files(
    'ncm/algebra/ncm_flapack.h',
    'ncm/algebra/ncm_gsl_blas_types.h',
)

ncm_headers_internal = files(
    'ncm/stats/ncm_stats_dist_kde_private.h',
    'ncm/stats/ncm_stats_dist_kernel_private.h',
    'ncm/stats/ncm_stats_dist_private.h',
    'ncm/stats/ncm_stats_dist_vkde_private.h',
    'nc/perturbations/nc_hipert_private.h',
)

nc_headers = files(
    'nc/data/nc_data_bao.h',
    'nc/data/nc_data_bao_a.h',
    'nc/data/nc_data_bao_dhr_dar.h',
    'nc/data/nc_data_bao_dmr_hr.h',
    'nc/data/nc_data_bao_dtr_dhr.h',
    'nc/data/nc_data_bao_dv.h',
    'nc/data/nc_data_bao_dvdv.h',
    'nc/data/nc_data_bao_empirical_fit.h',
    'nc/data/nc_data_bao_empirical_fit_2d.h',
    'nc/data/nc_data_bao_rdv.h',
    'nc/data/nc_data_bao_dvr_dtdh.h',
    'nc/data/nc_data_cluster_ncount.h',
    'nc/data/nc_data_cluster_ncounts_gauss.h',
    'nc/data/nc_data_cluster_pseudo_counts.h',
    'nc/data/nc_data_cluster_wl.h',
    'nc/data/nc_data_cluster_wl_factor.h',
    'nc/data/nc_data_cluster_mass_rich.h',
    'nc/data/nc_data_cluster_mass_rich_count.h',
    'nc/data/nc_data_cmb.h',
    'nc/data/nc_data_cmb_dist_priors.h',
    'nc/data/nc_data_cmb_shift_param.h',
    'nc/data/nc_data_dist_mu.h',
    'nc/data/nc_data_hubble.h',
    'nc/data/nc_data_hubble_bao.h',
    'nc/data/nc_data_planck_lkl.h',
    'nc/data/nc_data_snia.h',
    'nc/data/nc_data_snia_cov.h',
    'nc/data/nc_data_xcor.h',
    'nc/lss/galaxy/nc_galaxy_wl_obs.h',
    'nc/lss/galaxy/nc_galaxy_sd_position.h',
    'nc/lss/galaxy/nc_galaxy_sd_position_flat.h',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift.h',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_spec.h',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_gauss.h',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_pz.h',
    'nc/lss/galaxy/nc_galaxy_hod.h',
    'nc/lss/galaxy/nc_galaxy_hod_zheng07.h',
    'nc/lss/galaxy/nc_galaxy_sd_true_redshift.h',
    'nc/lss/galaxy/nc_galaxy_sd_true_redshift_lsst_srd.h',
    'nc/lss/galaxy/nc_galaxy_redshift_pop.h',
    'nc/lss/galaxy/nc_galaxy_redshift_pop_lsst_srd.h',
    'nc/lss/galaxy/nc_galaxy_redshift_factor.h',
    'nc/lss/galaxy/nc_galaxy_redshift_factor_composed.h',
    'nc/lss/galaxy/nc_galaxy_redshift_binning.h',
    'nc/lss/galaxy/nc_galaxy_position_factor.h',
    'nc/lss/galaxy/nc_galaxy_position_factor_flat.h',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_sel.h',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_sel_gauss.h',
    'nc/lss/galaxy/nc_galaxy_sd_shape.h',
    'nc/lss/galaxy/nc_galaxy_sd_shape_hsm_gauss.h',
    'nc/lss/galaxy/nc_galaxy_sd_shape_hsm_gauss_global.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor_quad.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor_var_add.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor_laplace.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor_series_lensed.h',
    'nc/lss/galaxy/nc_galaxy_shape_factor_fixed_quad.h',
    'nc/lss/galaxy/nc_galaxy_shape_intrinsic_mode.h',
    'nc/lss/galaxy/nc_galaxy_shape_pop.h',
    'nc/lss/galaxy/nc_galaxy_shape_pop_gauss.h',
    'nc/lss/galaxy/nc_galaxy_shape_pop_gauss_private.h',
    'nc/lss/galaxy/nc_galaxy_shape_pop_gauss_local.h',
    'nc/lss/galaxy/nc_galaxy_shape_pop_beta.h',
    'nc/lss/galaxy/nc_galaxy_redshift_obs.h',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_gauss.h',
    'nc/lss/cluster/nc_cluster_abundance.h',
    'nc/lss/cluster/nc_cluster_mass.h',
    'nc/lss/cluster/nc_cluster_mass_richness.h',
    'nc/lss/cluster/nc_cluster_mass_ascaso.h',
    'nc/lss/cluster/nc_cluster_mass_ext.h',
    'nc/lss/cluster/nc_cluster_mass_benson.h',
    'nc/lss/cluster/nc_cluster_mass_benson_xray.h',
    'nc/lss/cluster/nc_cluster_mass_lnnormal.h',
    'nc/lss/cluster/nc_cluster_mass_nodist.h',
    'nc/lss/cluster/nc_cluster_mass_plcl.h',
    'nc/lss/cluster/nc_cluster_mass_selection.h',
    'nc/lss/cluster/nc_cluster_mass_vanderlinde.h',
    'nc/lss/cluster/nc_cluster_photoz_gauss.h',
    'nc/lss/cluster/nc_cluster_photoz_gauss_global.h',
    'nc/lss/cluster/nc_cluster_pseudo_counts.h',
    'nc/lss/cluster/nc_cluster_redshift.h',
    'nc/lss/cluster/nc_cluster_redshift_nodist.h',
    'nc/lss/cluster/nc_cor_cluster_cmb_lens_limber.h',
    'nc/lss/galaxy/nc_galaxy_acf.h',
    'nc/lss/galaxy/nc_galaxy_selfunc.h',
    'nc/powspec/nc_growth_func.h',
    'nc/lss/halo/nc_halo_bias.h',
    'nc/lss/halo/nc_halo_bias_despali.h',
    'nc/lss/halo/nc_halo_bias_ps.h',
    'nc/lss/halo/nc_halo_bias_st_ellip.h',
    'nc/lss/halo/nc_halo_bias_st_spher.h',
    'nc/lss/halo/nc_halo_bias_tinker.h',
    'nc/lss/halo/nc_halo_mass_summary.h',
    'nc/lss/halo/nc_halo_cm_param.h',
    'nc/lss/halo/nc_halo_cm_duffy08.h',
    'nc/lss/halo/nc_halo_cm_klypin11.h',
    'nc/lss/halo/nc_halo_cm_prada12.h',
    'nc/lss/halo/nc_halo_cm_bhattacharya13.h',
    'nc/lss/halo/nc_halo_cm_dutton14.h',
    'nc/lss/halo/nc_halo_cm_diemer15.h',
    'nc/lss/halo/nc_halo_catalog.h',
    'nc/lss/halo/nc_halo_catalog_generator.h',
    'nc/lss/halo/nc_halo_catalog_member_generator.h',
    'nc/lss/halo/nc_halo_position.h',
    'nc/lss/halo/nc_halo_density_profile.h',
    'nc/lss/halo/nc_halo_density_profile_dk14.h',
    'nc/lss/halo/nc_halo_density_profile_einasto.h',
    'nc/lss/halo/nc_halo_density_profile_hernquist.h',
    'nc/lss/halo/nc_halo_density_profile_nfw.h',
    'nc/lss/halo/nc_halo_mass_function.h',
    'nc/lss/halo/nc_multiplicity_func.h',
    'nc/lss/halo/nc_multiplicity_func_bhattacharya.h',
    'nc/lss/halo/nc_multiplicity_func_bocquet.h',
    'nc/lss/halo/nc_multiplicity_func_crocce.h',
    'nc/lss/halo/nc_multiplicity_func_despali.h',
    'nc/lss/halo/nc_multiplicity_func_jenkins.h',
    'nc/lss/halo/nc_multiplicity_func_ps.h',
    'nc/lss/halo/nc_multiplicity_func_st.h',
    'nc/lss/halo/nc_multiplicity_func_tinker.h',
    'nc/lss/halo/nc_multiplicity_func_tinker_mean_normalized.h',
    'nc/lss/halo/nc_multiplicity_func_warren.h',
    'nc/lss/halo/nc_multiplicity_func_watson.h',
    'nc/lss/wl/nc_reduced_shear_calib.h',
    'nc/lss/wl/nc_reduced_shear_calib_wtg.h',
    'nc/lss/wl/nc_reduced_shear_cluster_mass.h',
    'nc/lss/wl/nc_wl_ellipticity.h',
    'nc/powspec/nc_transfer_func.h',
    'nc/powspec/nc_transfer_func_bbks.h',
    'nc/powspec/nc_transfer_func_camb.h',
    'nc/powspec/nc_transfer_func_eh.h',
    'nc/powspec/nc_transfer_func_eh_no_baryon.h',
    'nc/powspec/nc_window.h',
    'nc/powspec/nc_window_gaussian.h',
    'nc/powspec/nc_window_tophat.h',
    'nc/lss/wl/nc_wl_surface_mass_density.h',
    'nc/background/nc_hicosmo_Vexp.h',
    'nc/background/nc_hicosmo_de.h',
    'nc/background/nc_hicosmo_de_cpl.h',
    'nc/background/nc_hicosmo_de_jbp.h',
    'nc/background/nc_hicosmo_de_reparam_cmb.h',
    'nc/background/nc_hicosmo_de_reparam_ok.h',
    'nc/background/nc_hicosmo_de_wspline.h',
    'nc/background/nc_hicosmo_de_xcdm.h',
    'nc/background/nc_hicosmo_gcg.h',
    'nc/background/nc_hicosmo_idem2.h',
    'nc/background/nc_hicosmo_lcdm.h',
    'nc/background/nc_hicosmo_qconst.h',
    'nc/background/nc_hicosmo_qgrw.h',
    'nc/background/nc_hicosmo_qgw.h',
    'nc/background/nc_hicosmo_qlinear.h',
    'nc/background/nc_hicosmo_qrbf.h',
    'nc/background/nc_hicosmo_qspline.h',
    'nc/primordial/nc_hiprim_atan.h',
    'nc/primordial/nc_hiprim_bpl.h',
    'nc/primordial/nc_hiprim_expc.h',
    'nc/primordial/nc_hiprim_power_law.h',
    'nc/primordial/nc_hiprim_sbpl.h',
    'nc/primordial/nc_hiprim_two_fluids.h',
    'nc/perturbations/nc_hipert.h',
    'nc/perturbations/nc_hipert_adiab.h',
    'nc/perturbations/nc_hipert_bg_var.h',
    'nc/perturbations/nc_hipert_boltzmann.h',
    'nc/perturbations/nc_hipert_boltzmann_cbe.h',
    'nc/perturbations/nc_hipert_boltzmann_std.h',
    'nc/perturbations/nc_hipert_comp.h',
    'nc/perturbations/nc_hipert_comp_pb.h',
    'nc/perturbations/nc_hipert_em.h',
    'nc/perturbations/nc_hipert_first_order.h',
    'nc/perturbations/nc_hipert_grav.h',
    'nc/perturbations/nc_hipert_grav_einstein.h',
    'nc/perturbations/nc_hipert_gw.h',
    'nc/perturbations/nc_hipert_itwo_fluids.h',
    'nc/perturbations/nc_hipert_two_fluids.h',
    'nc/xcor/nc_xcor.h',
    'nc/xcor/nc_xcor_AB.h',
    'nc/xcor/nc_xcor_kernel.h',
    'nc/xcor/nc_xcor_kernel_component.h',
    'nc/xcor/nc_xcor_kernel_cmb_isw.h',
    'nc/xcor/nc_xcor_kernel_CMB_lensing.h',
    'nc/xcor/nc_xcor_kernel_gal.h',
    'nc/xcor/nc_xcor_kernel_weak_lensing.h',
    'nc/xcor/nc_xcor_kernel_tSZ.h',
    'nc/xcor/nc_xcor_kernel_cluster.h',
    'nc/xcor/nc_xcor_kernel_cluster_tophat.h',
    'nc/xcor/nc_xcor_lensing_efficiency.h',
    'nc/cmb/nc_cbe.h',
    'nc/cmb/nc_cbe_precision.h',
    'nc/quantum/nc_de_cont.h',
    'nc/background/nc_distance.h',
    'nc/background/nc_hicosmo.h',
    'nc/background/nc_hicosmo_priors.h',
    'nc/primordial/nc_hiprim.h',
    'nc/quantum/nc_hiqg_1d.h',
    'nc/reion/nc_hireion.h',
    'nc/reion/nc_hireion_camb.h',
    'nc/reion/nc_hireion_camb_reparam_tau.h',
    'nc/cmb/nc_planck_fi.h',
    'nc/cmb/nc_planck_fi_cor_tt.h',
    'nc/cmb/nc_planck_fi_cor_ttteee.h',
    'nc/powspec/nc_powspec_ml.h',
    'nc/powspec/nc_powspec_ml_cbe.h',
    'nc/powspec/nc_powspec_ml_spline.h',
    'nc/powspec/nc_powspec_ml_transfer.h',
    'nc/powspec/nc_powspec_mnl.h',
    'nc/powspec/nc_powspec_mnl_halofit.h',
    'nc/recomb/nc_recomb.h',
    'nc/recomb/nc_recomb_cbe.h',
    'nc/recomb/nc_recomb_seager.h',
    'nc/background/nc_scalefactor.h',
    'nc/supernova/nc_snia_dist_cov.h',
)

nc_sources = files(
    'nc/data/nc_data_bao.c',
    'nc/data/nc_data_bao_a.c',
    'nc/data/nc_data_bao_dhr_dar.c',
    'nc/data/nc_data_bao_dmr_hr.c',
    'nc/data/nc_data_bao_dtr_dhr.c',
    'nc/data/nc_data_bao_dv.c',
    'nc/data/nc_data_bao_dvdv.c',
    'nc/data/nc_data_bao_empirical_fit.c',
    'nc/data/nc_data_bao_empirical_fit_2d.c',
    'nc/data/nc_data_bao_rdv.c',
    'nc/data/nc_data_bao_dvr_dtdh.c',
    'nc/data/nc_data_cluster_ncount.c',
    'nc/data/nc_data_cluster_ncounts_gauss.c',
    'nc/data/nc_data_cluster_pseudo_counts.c',
    'nc/data/nc_data_cluster_wl.c',
    'nc/data/nc_data_cluster_wl_factor.c',
    'nc/data/nc_data_cluster_mass_rich.c',
    'nc/data/nc_data_cluster_mass_rich_count.c',
    'nc/data/nc_data_cmb.c',
    'nc/data/nc_data_cmb_dist_priors.c',
    'nc/data/nc_data_cmb_shift_param.c',
    'nc/data/nc_data_dist_mu.c',
    'nc/data/nc_data_hubble.c',
    'nc/data/nc_data_hubble_bao.c',
    'nc/data/nc_data_planck_lkl.c',
    'nc/data/nc_data_snia.c',
    'nc/data/nc_data_snia_cov.c',
    'nc/data/nc_data_xcor.c',
    'nc/lss/galaxy/nc_galaxy_wl_obs.c',
    'nc/lss/galaxy/nc_galaxy_sd_position.c',
    'nc/lss/galaxy/nc_galaxy_sd_position_flat.c',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift.c',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_spec.c',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_gauss.c',
    'nc/lss/galaxy/nc_galaxy_sd_obs_redshift_pz.c',
    'nc/lss/galaxy/nc_galaxy_hod.c',
    'nc/lss/galaxy/nc_galaxy_hod_zheng07.c',
    'nc/lss/galaxy/nc_galaxy_sd_true_redshift.c',
    'nc/lss/galaxy/nc_galaxy_sd_true_redshift_lsst_srd.c',
    'nc/lss/galaxy/nc_galaxy_redshift_pop.c',
    'nc/lss/galaxy/nc_galaxy_redshift_pop_lsst_srd.c',
    'nc/lss/galaxy/nc_galaxy_redshift_factor.c',
    'nc/lss/galaxy/nc_galaxy_redshift_factor_composed.c',
    'nc/lss/galaxy/nc_galaxy_redshift_binning.c',
    'nc/lss/galaxy/nc_galaxy_position_factor.c',
    'nc/lss/galaxy/nc_galaxy_position_factor_flat.c',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_sel.c',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_sel_gauss.c',
    'nc/lss/galaxy/nc_galaxy_sd_shape.c',
    'nc/lss/galaxy/nc_galaxy_sd_shape_hsm_gauss.c',
    'nc/lss/galaxy/nc_galaxy_sd_shape_hsm_gauss_global.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor_quad.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor_var_add.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor_laplace.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor_series_lensed.c',
    'nc/lss/galaxy/nc_galaxy_shape_factor_fixed_quad.c',
    'nc/lss/galaxy/nc_galaxy_shape_intrinsic_mode.c',
    'nc/lss/galaxy/nc_galaxy_shape_pop.c',
    'nc/lss/galaxy/nc_galaxy_shape_pop_gauss.c',
    'nc/lss/galaxy/nc_galaxy_shape_pop_gauss_local.c',
    'nc/lss/galaxy/nc_galaxy_shape_pop_beta.c',
    'nc/lss/galaxy/nc_galaxy_redshift_obs.c',
    'nc/lss/galaxy/nc_galaxy_redshift_obs_gauss.c',
    'nc/lss/cluster/nc_cluster_abundance.c',
    'nc/lss/cluster/nc_cluster_mass.c',
    'nc/lss/cluster/nc_cluster_mass_richness.c',
    'nc/lss/cluster/nc_cluster_mass_ascaso.c',
    'nc/lss/cluster/nc_cluster_mass_ext.c',
    'nc/lss/cluster/nc_cluster_mass_benson.c',
    'nc/lss/cluster/nc_cluster_mass_benson_xray.c',
    'nc/lss/cluster/nc_cluster_mass_lnnormal.c',
    'nc/lss/cluster/nc_cluster_mass_nodist.c',
    'nc/lss/cluster/nc_cluster_mass_plcl.c',
    'nc/lss/cluster/nc_cluster_mass_selection.c',
    'nc/lss/cluster/nc_cluster_mass_vanderlinde.c',
    'nc/lss/cluster/nc_cluster_photoz_gauss.c',
    'nc/lss/cluster/nc_cluster_photoz_gauss_global.c',
    'nc/lss/cluster/nc_cluster_pseudo_counts.c',
    'nc/lss/cluster/nc_cluster_redshift.c',
    'nc/lss/cluster/nc_cluster_redshift_nodist.c',
    'nc/lss/cluster/nc_cor_cluster_cmb_lens_limber.c',
    'nc/lss/galaxy/nc_galaxy_acf.c',
    'nc/lss/galaxy/nc_galaxy_selfunc.c',
    'nc/powspec/nc_growth_func.c',
    'nc/lss/halo/nc_halo_bias.c',
    'nc/lss/halo/nc_halo_bias_despali.c',
    'nc/lss/halo/nc_halo_bias_ps.c',
    'nc/lss/halo/nc_halo_bias_st_ellip.c',
    'nc/lss/halo/nc_halo_bias_st_spher.c',
    'nc/lss/halo/nc_halo_bias_tinker.c',
    'nc/lss/halo/nc_halo_mass_summary.c',
    'nc/lss/halo/nc_halo_cm_param.c',
    'nc/lss/halo/nc_halo_cm_duffy08.c',
    'nc/lss/halo/nc_halo_cm_klypin11.c',
    'nc/lss/halo/nc_halo_cm_prada12.c',
    'nc/lss/halo/nc_halo_cm_bhattacharya13.c',
    'nc/lss/halo/nc_halo_cm_dutton14.c',
    'nc/lss/halo/nc_halo_cm_diemer15.c',
    'nc/lss/halo/nc_halo_catalog.c',
    'nc/lss/halo/nc_halo_catalog_generator.c',
    'nc/lss/halo/nc_halo_catalog_member_generator.c',
    'nc/lss/halo/nc_halo_position.c',
    'nc/lss/halo/nc_halo_density_profile.c',
    'nc/lss/halo/nc_halo_density_profile_dk14.c',
    'nc/lss/halo/nc_halo_density_profile_einasto.c',
    'nc/lss/halo/nc_halo_density_profile_hernquist.c',
    'nc/lss/halo/nc_halo_density_profile_nfw.c',
    'nc/lss/halo/nc_halo_mass_function.c',
    'nc/lss/halo/nc_multiplicity_func.c',
    'nc/lss/halo/nc_multiplicity_func_bhattacharya.c',
    'nc/lss/halo/nc_multiplicity_func_bocquet.c',
    'nc/lss/halo/nc_multiplicity_func_crocce.c',
    'nc/lss/halo/nc_multiplicity_func_despali.c',
    'nc/lss/halo/nc_multiplicity_func_jenkins.c',
    'nc/lss/halo/nc_multiplicity_func_ps.c',
    'nc/lss/halo/nc_multiplicity_func_st.c',
    'nc/lss/halo/nc_multiplicity_func_tinker.c',
    'nc/lss/halo/nc_multiplicity_func_tinker_mean_normalized.c',
    'nc/lss/halo/nc_multiplicity_func_warren.c',
    'nc/lss/halo/nc_multiplicity_func_watson.c',
    'nc/lss/wl/nc_reduced_shear_calib.c',
    'nc/lss/wl/nc_reduced_shear_calib_wtg.c',
    'nc/lss/wl/nc_reduced_shear_cluster_mass.c',
    'nc/lss/wl/nc_wl_ellipticity.c',
    'nc/powspec/nc_transfer_func.c',
    'nc/powspec/nc_transfer_func_bbks.c',
    'nc/powspec/nc_transfer_func_camb.c',
    'nc/powspec/nc_transfer_func_eh.c',
    'nc/powspec/nc_transfer_func_eh_no_baryon.c',
    'nc/powspec/nc_window.c',
    'nc/powspec/nc_window_gaussian.c',
    'nc/powspec/nc_window_tophat.c',
    'nc/lss/wl/nc_wl_surface_mass_density.c',
    'nc/background/nc_hicosmo_Vexp.c',
    'nc/background/nc_hicosmo_de.c',
    'nc/background/nc_hicosmo_de_cpl.c',
    'nc/background/nc_hicosmo_de_jbp.c',
    'nc/background/nc_hicosmo_de_reparam_cmb.c',
    'nc/background/nc_hicosmo_de_reparam_ok.c',
    'nc/background/nc_hicosmo_de_wspline.c',
    'nc/background/nc_hicosmo_de_xcdm.c',
    'nc/background/nc_hicosmo_gcg.c',
    'nc/background/nc_hicosmo_idem2.c',
    'nc/background/nc_hicosmo_lcdm.c',
    'nc/background/nc_hicosmo_qconst.c',
    'nc/background/nc_hicosmo_qgrw.c',
    'nc/background/nc_hicosmo_qgw.c',
    'nc/background/nc_hicosmo_qlinear.c',
    'nc/background/nc_hicosmo_qrbf.c',
    'nc/background/nc_hicosmo_qspline.c',
    'nc/primordial/nc_hiprim_atan.c',
    'nc/primordial/nc_hiprim_bpl.c',
    'nc/primordial/nc_hiprim_expc.c',
    'nc/primordial/nc_hiprim_power_law.c',
    'nc/primordial/nc_hiprim_sbpl.c',
    'nc/primordial/nc_hiprim_two_fluids.c',
    'nc/perturbations/nc_hipert.c',
    'nc/perturbations/nc_hipert_adiab.c',
    'nc/perturbations/nc_hipert_bg_var.c',
    'nc/perturbations/nc_hipert_boltzmann.c',
    'nc/perturbations/nc_hipert_boltzmann_cbe.c',
    'nc/perturbations/nc_hipert_boltzmann_std.c',
    'nc/perturbations/nc_hipert_comp.c',
    'nc/perturbations/nc_hipert_comp_pb.c',
    'nc/perturbations/nc_hipert_em.c',
    'nc/perturbations/nc_hipert_first_order.c',
    'nc/perturbations/nc_hipert_grav.c',
    'nc/perturbations/nc_hipert_grav_einstein.c',
    'nc/perturbations/nc_hipert_gw.c',
    'nc/perturbations/nc_hipert_itwo_fluids.c',
    'nc/perturbations/nc_hipert_two_fluids.c',
    'nc/xcor/nc_xcor.c',
    'nc/xcor/nc_xcor_AB.c',
    'nc/xcor/nc_xcor_kernel.c',
    'nc/xcor/nc_xcor_kernel_component.c',
    'nc/xcor/nc_xcor_kernel_cmb_isw.c',
    'nc/xcor/nc_xcor_kernel_CMB_lensing.c',
    'nc/xcor/nc_xcor_kernel_gal.c',
    'nc/xcor/nc_xcor_kernel_weak_lensing.c',
    'nc/xcor/nc_xcor_kernel_tSZ.c',
    'nc/xcor/nc_xcor_kernel_cluster.c',
    'nc/xcor/nc_xcor_kernel_cluster_tophat.c',
    'nc/xcor/nc_xcor_lensing_efficiency.c',
    'nc/cmb/nc_cbe.c',
    'nc/cmb/nc_cbe_precision.c',
    'nc/quantum/nc_de_cont.c',
    'nc/background/nc_distance.c',
    'nc/background/nc_hicosmo.c',
    'nc/background/nc_hicosmo_priors.c',
    'nc/primordial/nc_hiprim.c',
    'nc/quantum/nc_hiqg_1d.c',
    'nc/reion/nc_hireion.c',
    'nc/reion/nc_hireion_camb.c',
    'nc/reion/nc_hireion_camb_reparam_tau.c',
    'nc/cmb/nc_planck_fi.c',
    'nc/cmb/nc_planck_fi_cor_tt.c',
    'nc/cmb/nc_planck_fi_cor_ttteee.c',
    'nc/powspec/nc_powspec_ml.c',
    'nc/powspec/nc_powspec_ml_cbe.c',
    'nc/powspec/nc_powspec_ml_spline.c',
    'nc/powspec/nc_powspec_ml_transfer.c',
    'nc/powspec/nc_powspec_mnl.c',
    'nc/powspec/nc_powspec_mnl_halofit.c',
    'nc/recomb/nc_recomb.c',
    'nc/recomb/nc_recomb_cbe.c',
    'nc/recomb/nc_recomb_seager.c',
    'nc/background/nc_scalefactor.c',
    'nc/supernova/nc_snia_dist_cov.c',
)

gnome = import('gnome')

ncm_enum_types = gnome.mkenums(
    'ncm_enum_types',
    c_template: 'ncm_enum_types.c.template',
    h_template: 'ncm_enum_types.h.template',
    sources: ncm_headers,
    install_header: true,
    install_dir: numcosmo_includedir,
)

nc_enum_types = gnome.mkenums(
    'nc_enum_types',
    c_template: 'nc_enum_types.c.template',
    h_template: 'nc_enum_types.h.template',
    sources: nc_headers,
    install_header: true,
    install_dir: numcosmo_includedir,
)

ncm_fit_nlopt_enum_types = []
if nlopt_dep.found()
    message('Generating ncm_fit_nlopt_enum_meta.h')

    process_nlopt_enum = find_program('process_nlopt_enum.py', required: true)
    glib_mkenums = find_program('glib-mkenums', required: true)

    nlopt_header_tmp = cc.preprocess(
        'ncm_fit_nlopt_enum_meta.c',
        output: 'ncm_fit_nlopt_enum_meta.i',
        dependencies: nlopt_dep,
    )

    nlopt_enum_meta = custom_target(
        'ncm_fit_nlopt_enum_meta.h',
        input: nlopt_header_tmp,
        output: 'ncm_fit_nlopt_enum_meta.h',
        command: [process_nlopt_enum, '@INPUT@', '@OUTPUT@'],
    )

    ncm_fit_nlopt_enum_h = custom_target(
        'ncm_fit_nlopt_enum.h',
        input: nlopt_enum_meta,
        output: 'ncm_fit_nlopt_enum.h',
        command: [
            glib_mkenums,
            '--template', meson.current_source_dir() / 'ncm_fit_nlopt_enum.h.template',
            '@INPUT@',
        ],
        capture: true,
        install: true,
        install_dir: numcosmo_includedir,
    )

    ncm_fit_nlopt_enum_c = custom_target(
        'ncm_fit_nlopt_enum.c',
        input: nlopt_enum_meta,
        output: 'ncm_fit_nlopt_enum.c',
        command: [
            glib_mkenums,
            '--template', meson.current_source_dir() / 'ncm_fit_nlopt_enum.c.template',
            '@INPUT@',
        ],
        capture: true,
    )

    ncm_fit_nlopt_enum_types += [ncm_fit_nlopt_enum_c, ncm_fit_nlopt_enum_h]
    ncm_sources += 'ncm/fit/ncm_fit_nlopt.c'
    ncm_headers += 'ncm/fit/ncm_fit_nlopt.h'
endif

install_headers(
    ncm_headers + nc_headers + [
        'numcosmo.h',
        'numcosmo-math.h',
    ],
    preserve_path: true,
    subdir: 'numcosmo',
)

sundials_inc = include_directories('external/sundials/include')
libcuba_inc = include_directories('external/libcuba')
lintegrate_inc = include_directories('external/lintegrate')

libnumcosmo_dep_list = [
    mpi_c_dep,
    cfitsio_dep,
    libfyaml_dep,
    fftw3_dep,
    fftw3f_dep,
    gio_dep,
    glib_dep,
    gmp_dep,
    gobject_dep,
    mpfr_dep,
    nlopt_dep,
    omp_c,
    blas_dep,
    lapack_dep,
    gsl_dep,
    arb_dep,
    flint_dep,
]

numcosmo_c_args = ['-DG_LOG_DOMAIN="NUMCOSMO"', '-DHAVE_CONFIG_H']
libnumcosmo = library(
    'numcosmo',
    sources: [
        ncm_sources,
        ncm_headers,
        ncm_sources_nogi,
        ncm_headers_nogi,
        ncm_headers_internal,
        nc_sources,
        nc_headers,
        numcosmo_sources,
        ncm_enum_types,
        nc_enum_types,
        ncm_fit_nlopt_enum_types,
        'numcosmo.h',
        'numcosmo-math.h',
        'config_extra.h',
    ],
    version: library_version,
    soversion: soversion,
    darwin_versions: darwin_versions,
    install: true,
    # intl.lib is not compatible with SAFESEH
    link_args: [noseh_link_args],
    include_directories: [configinc, sundials_inc, libcuba_inc, plc_inc, lintegrate_inc],
    # Planck likelihood code uses dlsym to load the Planck likelihood library
    # components. This requires linking with link_whole to ensure that the
    # symbols are available at runtime.
    link_whole: [libplc],
    link_with: [libsundials, libcuba, liblevmar, libmisc, libtoeplitz, libclass, liblintegrate],
    dependencies: libnumcosmo_dep_list,
    c_args: numcosmo_c_args,
)

libnumcosmo_dep_sources = [
    ncm_enum_types[1],
    nc_enum_types[1],
]

if nlopt_dep.found()
    libnumcosmo_dep_sources += ncm_fit_nlopt_enum_types[1]
endif

libnumcosmo_dep = declare_dependency(
    link_with: libnumcosmo,
    dependencies: libnumcosmo_dep_list,
    sources: libnumcosmo_dep_sources,
)

# Generate pkg-config files
# Code using NumCosmo frequently depends directly on gsl, glib, gobject, and gio, so we
# include them in the Requires field.
# This happens mostly because of inlining, but also because of the many macros defined
# in the glib headers.
pkg.generate(
    libnumcosmo,
    version: numcosmo_version,
    install_dir: numcosmo_pkgconfigreldir,
    filebase: 'numcosmo',
    name: 'NumCosmo',
    description: 'NumCosmo is a free software C Cosmology library',
    libraries: [gsl_dep, glib_dep, gobject_dep, gio_dep],
)

if enable_gir

    ncm_introspection_sources = [
        'ncm_gir_scan.h',
        ncm_sources,
        ncm_headers,
        ncm_enum_types,
        ncm_fit_nlopt_enum_types,
        'numcosmo-math.h',
    ]

    # -U__OPTIMIZE__ is needed to avoid a bug in gobject-introspection
    # It has no effect on the generated code
    numcosmo_math_gir = gnome.generate_gir(
        libnumcosmo,
        namespace: 'NumCosmoMath',
        nsversion: '1.0',
        identifier_prefix: 'Ncm',
        symbol_prefix: 'ncm',
        header: 'numcosmo/numcosmo-math.h',
        export_packages: 'numcosmo',
        sources: ncm_introspection_sources,
        dependencies: libnumcosmo_dep,
        includes: 'GObject-2.0',
        install: true,
        extra_args: ['-DNUMCOSMO_GIR_SCAN'],
    )

    nc_introspection_sources = [
        'ncm_gir_scan.h',
        nc_sources,
        nc_headers,
        nc_enum_types,
        'numcosmo.h',
    ]

    # -U__OPTIMIZE__ is needed to avoid a bug in gobject-introspection
    # It has no effect on the generated code
    numcosmo_gir = gnome.generate_gir(
        libnumcosmo,
        namespace: 'NumCosmo',
        nsversion: '1.0',
        identifier_prefix: 'Nc',
        symbol_prefix: 'nc',
        header: 'numcosmo/numcosmo.h',
        export_packages: 'numcosmo',
        sources: nc_introspection_sources,
        dependencies: libnumcosmo_dep,
        includes: ['GObject-2.0', numcosmo_math_gir[0]],
        install: true,
        extra_args: ['-DNUMCOSMO_GIR_SCAN'],
    )
    if have_vala
        vapi_deps = [
            'glib-2.0',
            'gobject-2.0',
        ]

        libnumcosmo_math_vapi = gnome.generate_vapi(
            'numcosmo-math',
            sources: numcosmo_math_gir[0],
            packages: vapi_deps,
            install: true,
        )

        libnumcosmo_vapi = gnome.generate_vapi(
            'numcosmo',
            sources: numcosmo_gir[0],
            packages: vapi_deps + [libnumcosmo_math_vapi],
            install: true,
        )
    endif
endif
